[package]
authors = ["fpgaminer"]
name = "fortress-server"
version = "1.0.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/fpgaminer/fortress-server"
description = "Fortress password manager sync server"
homepage = "https://github.com/fpgaminer/fortress-server"
documentation = "https://docs.rs/fortress-server"
readme = "README.md"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
anyhow = "1"
hex = { version = "0.4.3", features = ["serde"] }
env_logger = "0.10"
log = "0.4.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-actix-rustls"] }
subtle = "2.4.1"
futures = "0.3.29"
toml = "0.8"
rand = "0.8.5"
actix-http = "3.4.0"
