[package]
authors = ["fpgaminer"]
name = "fortress-server"
version = "1.0.0"
license = "MIT/Apache-2.0"
repository = "https://github.com/fpgaminer/fortress-server"
description = "Fortress password manager sync server"
homepage = "https://github.com/fpgaminer/fortress-server"
documentation = "https://docs.rs/fortress-server"
readme = "README.md"
edition = "2021"

[dependencies]
actix-web = "4.12"
anyhow = "1"
hex = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-rustls-ring-webpki"] }
subtle = "2.6"
toml = "1.0"
rand = "0.10"
actix-http = "3.11"
